--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
+@import "tailwindcss";
+@import './styles/variables.css';
+@import './styles/typography.css';
+@import './styles/global.css';
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-/* Your custom styles */
-body {
-  font-family: 'Ubuntu', sans-serif;
-}
