--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -8,7 +8,7 @@ html, body, #root {
 }
 
 body {
-  font-family: var('Ubuntu');
+  font-family: var(--font-family-base);
   font-size: var(--font-size-body);
   color: var(--primary-text-colour);
   line-height: 1.5;
