--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
-
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
-
 @import './styles/variables.css';
 @import './styles/typography.css';
 @import './styles/global.css';
+
+/* must come after imports */
+@custom-variant dark (&:where(.dark, .dark *));
